Try to get netlify deploy working

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/cph426-2019/travel-notes-lydialydd#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.3"
   }
 }
