--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "426 website",
   "main": "index.js",
+ 
   "scripts": {
-    "start": "parcel src/*.html --open",
-    "build": "parcel build src/*.html"
+      "start": "ts-node server/index.ts",
+      "build": "parcel build client/{*.css,gallery.tsx,main.ts}"
+  
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,10 @@
   },
   "homepage": "https://github.com/cph426-2019/travel-notes-lydialydd#readme",
   "devDependencies": {
+    "@types/express": "^4.16.1",
+    "@types/express-handlebars": "0.0.32",
+    "@types/handlebars": "^4.1.0",
+    "@types/node": "^12.0.3",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "cssnano": "^4.1.10",
@@ -28,6 +34,12 @@
     "parcel-plugin-static-files-copy": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "ts-node": "^8.2.0",
     "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "handlebars": "^4.1.2"
   }
 }
