--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
  
   "scripts": {
       "start": "ts-node server/index.ts",
-      "build": "parcel build client/{*.css,gallery.tsx,main.ts}"
-  
+      "build": "parcel build client/{*.css,gallery.tsx,main.ts}",
+      "prod": "git pull && npm install && npm run build && sudo npm run start",
+      "deploy": "ssh -i ~/.ssh/COMP426-2019.pem ubuntu@54.159.184.160 'sudo service blog_app restart"
   },
   "repository": {
     "type": "git",
