--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "travel-notes-lydialydd",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "426 website",
   "main": "index.js",
  
   "scripts": {
       "start": "ts-node server/index.ts",
       "build": "parcel build client/{*.css,gallery.tsx,main.ts}",
-      "prod": "git pull && npm install && npm run build && sudo NODE_ENV=production npm run start",
+      "prod": "git reset --hard && git pull && npm install && npm run build && sudo NODE_ENV=production npm run start",
       "deploy": "ssh blog 'sudo service blog-app restart' "
   },
   "repository": {
