--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.1",
   "description": "426 website",
   "main": "index.js",
- 
   "scripts": {
-      "start": "ts-node server/index.ts",
-      "build": "parcel build client/{*.css,gallery.tsx,main.ts}",
-      "prod": "git reset --hard && git pull && npm install && npm run build && sudo NODE_ENV=production npm run start",
-      "deploy": "ssh blog 'sudo service blog-app restart' "
+    "start": "ts-node server/index.ts",
+    "build": "parcel build client/{*.css,gallery.tsx,main.ts}",
+    "prod": "git reset --hard && git pull && npm install && npm run build && sudo NODE_ENV=production npm run start",
+    "deploy": "ssh blog 'sudo service blog-app restart' "
   },
   "repository": {
     "type": "git",
@@ -39,6 +38,7 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.1.2"
