--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cph426-2019/travel-notes-lydialydd#readme",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/express-handlebars": "0.0.32",
     "@types/handlebars": "^4.1.0",
