--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.16.1",
     "@types/express-handlebars": "0.0.32",
     "@types/handlebars": "^4.1.0",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^12.0.3",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -42,6 +43,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "handlebars": "^4.1.2"
+    "handlebars": "^4.1.2",
+    "mysql2": "^1.6.5"
   }
 }
