--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node server/index.ts",
-    "build": "parcel build client/{*.css,gallery.tsx,main.ts}",
+    "build": "rm -rf dist && parcel build client/{*.css,gallery.tsx,main.ts}",
     "prod": "git reset --hard && git pull && npm install && npm run build && sudo NODE_ENV=production npm run start",
     "deploy": "ssh blog 'sudo service blog-app restart' "
   },
