--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cph426-2019/travel-notes-lydialydd#readme",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/express-handlebars": "0.0.32",
@@ -40,6 +41,9 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.6",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
